Fix placeholder overlay alignment

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -63,6 +63,8 @@
     left: 0;
     top: 0;
     width: 100%;
+    box-sizing: border-box;
+    padding-left: inherit;
     pointer-events: none;
 }
 
